--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -99,7 +99,7 @@
                 </td>
                 <td>
                   {% if episode.pubDate %}
-                    <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
+                    <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d M Y H:i" }}</span>
                   {% else %}
                     <span>N/A</span>
                   {% endif %}
