--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -176,11 +176,13 @@
     </div>
     <div class="col-12 order-4 col-lg-4 color-3">
       <div class="dope-wrapper">
-        <p>This will enable session-based user account</p>
+        <p>
+          Create a temporary user account linked to your browser to try out all the features
+        </p>
         <div class="dope-buttons-c">
-          <button class="btn-dope">
-            Coming soon!
-          </button>
+          <a class="btn-dope" href="{% url 'temp' %}">
+            Try it out!
+          </a>
         </div>
       </div>
     </div>
