--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,5 +1,5 @@
 {% if results.pages %}
-  <div class="dope-buttons-l">
+  <div class="dope-buttons dope-buttons-l">
     {% if results.start_url %}
       <a class="btn-dope options-button" href="{{ results.start_url }}">
         <i class="fas fa-angle-double-left" title="First Page"></i>
