--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -51,7 +51,7 @@
         </a>
       </h1>
       <h2>
-        <span>
+        <span class="by">
           by
         </span>
         {{ podcast.object.artist }}
