--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -83,7 +83,7 @@
             {{ podcast.object.title }}
           </h1>
           <h2>
-            <span>
+            <span class="by">
               by
             </span>
             {{ podcast.object.artist }}
@@ -100,7 +100,7 @@
             {{ podcast.object.title }}
           </h1>
           <h2>
-            <span>
+            <span class="by">
               by
             </span>
             {{ podcast.object.artist }}
@@ -117,7 +117,7 @@
             {{ podcast.object.title }}
           </h1>
           <h2>
-            <span>
+            <span class="by">
               by
             </span>
             {{ podcast.object.artist }}
@@ -134,7 +134,7 @@
             {{ podcast.object.title }}
           </h1>
           <h2>
-            <span>
+            <span class="by">
               by
             </span>
             {{ podcast.object.artist }}
