--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -9,7 +9,7 @@
         {{ podcast.title }}
       </h1>
       <h2>
-        <span>
+        <span class="by">
           By
         </span>
         {{ podcast.artist }}
