--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -22,7 +22,7 @@
               {{ podcast.title }}
             </h1>
             <h2>
-              <span>
+              <span class="by">
                 by
               </span>
               {{ podcast.artist }}
