--- a/podcasts/templates/cookie_banner.html
+++ b/podcasts/templates/cookie_banner.html
@@ -1,23 +1,15 @@
-<div class="color-1" id="cookie-banner">
+<div class="cookie-banner color-1">
   <div class="col-12 dope-wrapper">
-    <h1>This website uses cookies</h1>
-    <button class="btn-dope cookie-banner-close">
+    <button class="btn-dope cookie-banner-close float-left">
+      <i class="fas fa-check"></i>
+    </button>
+    <button class="btn-dope cookie-banner-close float-right">
       <i class="fas fa-times"></i>
     </button>
+    <h1>This website uses cookies.</h1>
     <p>
-      dopepod has no ads, but hosting a website is not free. To support this service, please consider a
+      A cookie is a small file used for authenticating and interacting with your browser.
+      We only use them to enhance user experience.
     </p>
-    <form action="//www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-      <input type="hidden" name="cmd" value="_donations">
-      <input type="hidden" name="business" value="cyanidesayonara@gmail.com">
-      <input type="hidden" name="lc" value="US">
-      <input type="hidden" name="item_name" value="dopepod">
-      <input type="hidden" name="no_note" value="0">
-      <input type="hidden" name="currency_code" value="USD">
-      <button class="dope-link" type="submit">
-        Donation
-        <i class="fab fa-paypal"></i>
-      </button>
-    </form>
   </div>
 </div>
