--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -116,7 +116,7 @@
     </div>
     <div class="col-12 order-3 col-lg-4 order-lg-2 color-3">
       <div class="dope-wrapper">
-        <p>Sign in with your social media account</p>
+        <p>Sign in with your social media account.</p>
         {% include "social-login.min.html" %}
       </div>
     </div>
@@ -169,7 +169,7 @@
     <div class="col-12 order-4 col-lg-4 color-3">
       <div class="dope-wrapper">
         <p>
-          Create a temporary user account linked to your browser to try out all the features
+          Create a temporary user account linked to your browser to try out all the features.
         </p>
         <div class="dope-buttons dope-buttons-c">
           <button class="btn-dope">
