--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -49,21 +49,36 @@
             <span>{{ episode.played_ago }}</span>
           </li>
         </ul>
-        <div class="dope-buttons px-0">
+        <div class="dope-buttons dope-buttons-c px-0">
           <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
             {% csrf_token %}
             <input type="hidden" name="mode" value="play" />
             <input type="hidden" name="signature" value="{{ episode.signature }}" />
-            <button class="btn-dope active" type="submit">
-              Play
+            <button class="btn-dope btn-dope-split" type="submit">
+              <span>
+                Play
+              </span>
+              <span>
+                <i class="fas fa-play"></i>
+              </span>
             </button>
           </form>
-          <a class="btn-dope active" href="{{ episode.url }}" download>
-            Download
+          <a class="btn-dope btn-dope-split" href="{{ episode.url }}" download>
+            <span>
+              Download
+            </span>
+            <span>
+              <i class="fas fa-download"></i>
+            </span>
           </a>
-          <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
+          <a class="btn-dope btn-dope-split showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
             title="{{ episode.podcast.title }}">
-            Episodes
+            <span>
+              Episodes
+            </span>
+            <span>
+              <i class="fas fa-bars"></i>
+            </span>
           </a>
           {% if user.is_authenticated %}
           <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
@@ -75,10 +90,10 @@
             </button>
           </form>
           {% endif %}
-          <button class="btn-dope exp exp-icon active" data-toggle="collapse" data-target="#splash-play-collapse{{ forloop.counter }}"
-            aria-expanded="false">
+          <a class="btn-dope btn-dope-split" data-toggle="collapse" data-target="#splash-play-collapse{{ forloop.counter }}" aria-expanded="false">
             <span>More</span>
-          </button>
+            <span class="exp-icon"></span>
+          </a>
         </div>
         <div class="collapse fade splash-play-collapse" id="splash-play-collapse{{ forloop.counter }}">
           <ul class="dope-list">
