--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -127,31 +127,55 @@
         </p>
         <div class="dope-buttons dope-buttons-c">
           {% if view == "signup" %}
-            <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
+            <a class="btn-dope btn-dope-split login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
               aria-controls="login-collapse">
-              Login
+              <span>
+                Login
+              </span>
+              <span class="exp-icon">
+              </span>
             </a>
-            <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true"
+            <a class="btn-dope btn-dope-split signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true"
               aria-controls="signup-collapse">
-              Signup
+              <span>
+                Signup
+              </span>
+              <span class="exp-icon">
+              </span>
             </a>
           {% elif view == "login" %}
-            <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true"
+            <a class="btn-dope btn-dope-split login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true"
               aria-controls="login-collapse">
-              Login
+              <span>
+                Login
+              </span>
+              <span class="exp-icon">
+              </span>
             </a>
-            <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
+            <a class="btn-dope btn-dope-split signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
               aria-controls="signup-collapse">
-              Signup
+              <span>
+                Signup
+              </span>
+              <span class="exp-icon">
+              </span>
             </a>
           {% else %}
-            <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
+            <a class="btn-dope btn-dope-split login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
               aria-controls="login-collapse">
-              Login
+              <span>
+                Login
+              </span>
+              <span class="exp-icon">
+              </span>
             </a>
-            <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
+            <a class="btn-dope btn-dope-split signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
               aria-controls="signup-collapse">
-              Signup
+              <span>
+                Signup
+              </span>
+              <span class="exp-icon">
+              </span>
             </a>
           {% endif %}
           </div>
