--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="dope-buttons dope-buttons-r float-right">
-        <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
+        <a class="btn-dope exp-icon" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse">
         </a>
         <a class="btn-dope index-link" href="/">
