--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -77,19 +77,19 @@
           </em>
         </li>
         <li>
-          <a class="btn-dope btn-dope-social" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}">
-            <span class="social-icon">
+          <a class="btn-dope btn-dope-split" href="//twitter.com/intent/tweet?text={{ podcast.url_format_description }}&url={{ podcast.get_absolute_url }}">
+            <span>
               <i class="fab fa-twitter" title="Tweet"></i>
             </span>
-            <span class="social-button">
+            <span>
               Tweet
             </span>
           </a>
-          <a class="btn-dope btn-dope-social" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}">
-            <span class="social-icon">
+          <a class="btn-dope btn-dope-split" href="//www.facebook.com/sharer/sharer.php?u={{ podcast.get_absolute_url }}">
+            <span>
               <i class="fab fa-facebook-f" title="Share"></i>
             </span>
-            <span class="social-button">
+            <span>
               Share
             </span>
           </a>    
