--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,9 +1,9 @@
 {% if not results.episodes and results.view == "playlist" %}
 {% else %}
   <div class="row">
-    <div class="col-12 color-3 dope-options{% if results.view == 'showpod' %} noborder{% endif %}">
-      <div class="dope-buttons dope-buttons-r">
-        {% if results.view == "showpod" %}
+    {% if results.view == "showpod" %}
+      <div class="col-12 color-3 dope-options noborder">
+        <div class="dope-buttons dope-buttons-r">
           {% if user.is_authenticated %}
             <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
               {% csrf_token %}
@@ -19,19 +19,23 @@
               {% endif %}
             </form>
           {% endif %}
-          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
-            Episodes
+          <a class="btn-dope btn-dope-split" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+            <span>
+              Episodes
+            </span>
+            <span class="exp-icon">
+            </span>
           </a>
-          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
-            Reviews
+          <a class="btn-dope btn-dope-split" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+            <span>
+              Reviews
+            </span>
+            <span class="exp-icon">
+            </span>
           </a>
-        {% elif results.view == "playlist" %}
-          <a class="btn-dope options-button" href="{% url 'playlist' %}">
-            <i class="fas fa-sync" title="Update"></i>
-          </a>
-        {% endif %}
+        </div>
       </div>
-    </div>
+    {% endif %}
   </div>
 {% endif %}
 {% if not results.view == "playlist" %}
@@ -57,9 +61,9 @@
     </div>
   </div>
 {% else %}
-  <div class="row fade collapse showpod-collapse show" id="episodes-collapse">
-    {% include "pagination.min.html" %}
-    {% if results.episodes %}
+  {% if results.episodes %}
+    <div class="row fade collapse showpod-collapse show" id="episodes-collapse">
+      {% include "pagination.min.html" %}
       <div class="col-12 px-0">
         <table class="table episodes-table">
           <thead>
@@ -165,16 +169,31 @@
                           {% else %}
                             <input type="hidden" name="signature" value="{{ episode.signature }}" />
                           {% endif %}
-                          <button class="btn-dope playlist-play active" type="submit" title="Play">
-                            Play
+                          <button class="btn-dope btn-dope-split playlist-play" type="submit" title="Play">
+                            <span>
+                              Play
+                            </span>
+                            <span>
+                              <i class="fas fa-play"></i>
+                            </span>
                           </button>
                         </form>
-                        <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
-                          Download
+                        <a class="btn-dope btn-dope-split" href="{{ episode.url }}" title="Download" download>
+                          <span>
+                            Download
+                          </span>
+                          <span>
+                            <i class="fas fa-download"></i>
+                          </span>
                         </a>
                         {% if results.view == "playlist" %}
-                          <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
-                            Episodes
+                          <a class="btn-dope btn-dope-split showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
+                            <span>
+                              Episodes
+                            </span>
+                            <span>
+                              <i class="fas fa-bars"></i>
+                            </span>
                           </a>
                         {% endif %}
                         {% if user.is_authenticated and results.view == "showpod" %}
@@ -196,7 +215,7 @@
           </tbody>
         </table>
       </div>
-    {% endif %}
-    {% include "pagination.min.html" %}
-  </div>
+      {% include "pagination.min.html" %}
+    </div>
+  {% endif %}
 {% endif %}
