--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -1,10 +1,11 @@
 <div class="row">
   <div class="col-12 color-3 dope-options">
     <div class="dope-buttons dope-buttons-r">
-      <a class="btn-dope options-button" href="{% url 'last_played' %}">
-        <span>Updated </span>
-        <span class="date" data-utc="{% now 'U' %}">{% now "d M Y H:i" %}</span>
-        <i class="fas fa-sync" title="Update"></i>
+      <a class="btn-dope btn-dope-split options-button" href="{% url 'last_played' %}">
+        <span>Updated</span>
+        <span class="date" data-utc="{% now 'U' %}">
+          {% now "d M Y H:i" %}
+        </span>
       </a>
     </div>
   </div>
@@ -19,7 +20,7 @@
         <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
       </a>
-      <button class="dope-toggle exp exp-icon" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
+      <button class="dope-toggle exp-icon" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
       aria-expanded="false">
       </button>
       <h1>
@@ -80,16 +81,31 @@
           {% csrf_token %}
           <input type="hidden" name="mode" value="play" />
           <input type="hidden" name="signature" value="{{ episode.signature }}" />
-          <button class="btn-dope active" type="submit">
-            Play
+          <button class="btn-dope btn-dope-split" type="submit">
+            <span>
+              Play
+            </span>
+            <span>
+              <i class="fas fa-play"></i>
+            </span>
           </button>
         </form>
-        <a class="btn-dope active" href="{{ episode.url }}" download>
-          Download
+        <a class="btn-dope btn-dope-split" href="{{ episode.url }}" download>
+          <span>
+            Download
+          </span>
+          <span>
+            <i class="fas fa-download"></i>
+          </span>
         </a>
-        <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
+        <a class="btn-dope btn-dope-split showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
           title="{{ episode.podcast.title }}">
-          Episodes
+          <span>
+            Episodes
+          </span>
+          <span>
+            <i class="fas fa-bars"></i>
+          </span>       
         </a>
         {% if user.is_authenticated %}
           <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
@@ -101,9 +117,9 @@
             </button>
           </form>
         {% endif %}
-        <button class="btn-dope exp exp-icon active" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
-          aria-expanded="false">
+        <button class="btn-dope btn-dope-split" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}" aria-expanded="false">
           <span>More</span>
+          <span class="exp-icon"></span>
         </button>
       </div>
     </div>
