--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -2,9 +2,9 @@
   <div class="col-12 col-lg-4 ml-auto">
     <div class="color-1" id="player-wrapper">
       <div class="collapse fade" id="player-close-collapse">
-        <p>
+        <span>
           Close player?
-        </p>
+        </span>
         <button class="btn-dope player-close">
           Yes
         </button>
@@ -16,10 +16,10 @@
         <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
       </a>
-      <div class="dope-buttons float-left">
-        <button class="btn-dope exp exp-icon player-minimize" aria-expanded="true">
+      <div class="dope-buttons dope-buttons-r p-0 float-right">
+        <button class="btn-dope exp-icon player-minimize" aria-expanded="true">
         </button>
-        <button class="btn-dope exp" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
+        <button class="btn-dope" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
           <i class="fas fa-times" title="Close"></i>
         </button>
       </div>
@@ -45,12 +45,13 @@
         <p class="player-description">
           {{ episode.description }}
         </p>
-        <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
-          <i class="fas fa-download"></i>
-        </a>
+        <div class="dope-buttons px-0">
+          <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
+            <i class="fas fa-download"></i>
+          </a>
+        </div>
       </div>
-      <button class="btn-dope exp exp-icon player-collapse-toggle" data-toggle="collapse" data-target="#player-collapse"
-        aria-expanded="false">
+      <button class="btn-dope exp-icon float-right" data-toggle="collapse" data-target="#player-collapse" aria-expanded="false">
       </button>        
       <audio class="audio" {% if user.is_authenticated %}onended="playNext()"{% else %}onended="closePlayer()"{% endif %} controls preload="metadata" autoplay>
         <source src="{{ episode.url }}"/>
