--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -1,71 +1,90 @@
 <div class="row">
   <div class="col-12 color-3 dope-options">
     <div class="dope-buttons dope-buttons-r">
-      {% if results.order == "rank" %}
-        <a class="btn-dope options-button active order-button" href="{{ results.order_url }}">
-          <span>123</span>
-          <span class="d-none">ABC</span>
-        </a>
-      {% elif results.order == "name" %}
-        <a class="btn-dope options-button active order-button" href="{{ results.order_url }}">
-          <span class="d-none">123</span>
-          <span>ABC</span>
-        </a>
-      {% endif %}
+      <a class="btn-dope btn-dope-split options-button" href="{{ results.order_url }}">
+        <span>
+          Order
+        </span>
+        <span class="btn-dope-toggle">
+          {% if results.order == "rank" %}
+            <span>123</span>
+            <span class="d-none">ABC</span>
+          {% elif results.order == "name" %}
+            <span class="d-none">123</span>
+            <span>ABC</span>
+          {% endif %}
+        </span>
+      </a>
       {% if results.view == "grid" %}
-        <a class="btn-dope view-button active" href="{{ results.view_url }}">
-          <span data-view="list">
-            <i class="fas fa-th" title="Toggle View"></i>
+        <a class="btn-dope btn-dope-split view-button" href="{{ results.view_url }}">
+          <span>
+            Display
           </span>
-          <span class="d-none" data-view="grid">
-            <i class="fas fa-bars" title="Toggle View"></i>
+          <span class="btn-dope-toggle">
+            <span data-view="list">
+              <i class="fas fa-th" title="Toggle View"></i>
+            </span>
+            <span class="d-none" data-view="grid">
+              <i class="fas fa-bars" title="Toggle View"></i>
+            </span>
           </span>
         </a>
       {% elif results.view == "list" %}
-        <a class="btn-dope view-button active" href="{{ results.view_url }}">
-          <span class="d-none" data-view="list">
-            <i class="fas fa-th" title="Toggle View"></i>
+        <a class="btn-dope btn-dope-split view-button" href="{{ results.view_url }}">
+          <span>
+            Display
           </span>
-          <span data-view="grid">
-            <i class="fas fa-bars" title="Toggle View"></i>
+          <span class="btn-dope-toggle">
+            <span class="d-none" data-view="list">
+              <i class="fas fa-th" title="Toggle View"></i>
+            </span>
+            <span data-view="grid">
+              <i class="fas fa-bars" title="Toggle View"></i>
+            </span>
           </span>
         </a>
       {% endif %}
       {% if results.alphabet %}
-        {% if results.alphabet_nix_url %}
-          <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false"
-            aria-controls="alphabet-collapse">
-            {{ results.selected_q|capfirst }}
-          </a>
-        {% else %}
-          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
-            A-Z
-          </a>
-        {% endif %}
+        <a class="btn-dope btn-dope-split" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
+          <span>
+            Initial
+          </span>
+          <span class="exp exp-icon">
+            {% if results.alphabet_nix_url %}
+              {{ results.selected_q|capfirst }}
+            {% else %}
+              A-Z
+            {% endif %}
+          </span>
+        </a>
       {% endif %} 
       {% if results.genres %}
-        {% if results.selected_genre %}
-          <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false"
-            aria-controls="genre-collapse">
-            {{ results.selected_genre }}
-          </a>
-        {% else %}
-          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
-            All Genres
-          </a>
-        {% endif %}
+        <a class="btn-dope btn-dope-split" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
+          <span>
+            Genre
+          </span>
+          <span class="exp exp-icon">
+            {% if results.selected_genre %}
+              {{ results.selected_genre }}
+            {% else %}
+              All
+            {% endif %}
+          </span>           
+        </a>
       {% endif %}
       {% if results.languages %}
-        {% if results.selected_language %}
-          <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false"
-            aria-controls="language-collapse">
-            {{ results.selected_language }}
-          </a>
-        {% else %}
-          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
-            All Languages
-          </a>
-        {% endif %}
+        <a class="btn-dope btn-dope-split" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
+          <span>
+            Language
+          </span>
+          <span class="exp exp-icon">
+            {% if results.selected_language %}
+              {{ results.selected_language }}
+            {% else %}
+              All
+            {% endif %}
+          </span>        
+        </a>
       {% endif %}
     </div>
     {% include "results-options.min.html" %}
