--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -90,7 +90,7 @@
           <tbody>
             {% for episode in results.episodes %}
               <tr class="episode-header exp" tabindex="0" data-toggle="collapse" data-target="#more-collapse{{ episode.position }}" aria-expanded="false">
-                <th scope="row">
+                <th class="order" scope="row">
                   <span>{{ episode.position }}</span>
                 </th>
                 <td class="title">
