--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -49,7 +49,7 @@
 </div>
 <div class="row">
   {% for podcast in results.podcasts %}
-    <div class="col-12 expandable dope-result">
+    <div class="col-12 expandable dope-result{% if forloop.counter|divisibleby:2 %} color-3{% endif %}">
       <a class="charts-rank showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         {{ forloop.counter }}
       </a>
